--- a/recent.html
+++ b/recent.html
@@ -252,7 +252,7 @@ body {
 		<main>
 			
 			<!-- ============================================================= SECTION – HERO ============================================================= -->
-			<section id="hero" class="img-bg-bottom img-bg-soft tint-bg" style="background-image: url('assets/images/ZakimDuotone.png');">
+			<section id="hero" class="img-bg-bottom img-bg-soft tint-bg" style="background-image: url('assets/images/CD_0004_Office-4-BW.jpg');">
 				<div class="container inner">
 					<div class="row">
 						<div class="col-sm-10 col-sm-offset-1">
