--- a/contact.html
+++ b/contact.html
@@ -290,7 +290,7 @@ body {
 									
 									<li class="tab">
 										<a href="tab.html#tab-1">
-											<h3>Where</h3>
+											<h3>Our Location</h3>
 										</a><!-- /#tab-1 -->
 									</li><!-- /.tabs -->
 									
