--- a/ourexpertise.html
+++ b/ourexpertise.html
@@ -265,7 +265,7 @@ body {
 					<div class="row">
 						<div class="col-md-8 col-sm-9 center-block text-center" id="delay">
 							<header>
-								<p>We are proud to have been recognized as an Asset Management magazine as a top 30 expert in the field of intellectual property.</p>
+								<p>We are grateful to have been recognized as an Intellectual Asset Management magazine as a top 30 expert in the field of intellectual property.</p>
 							</header>
 						</div><!-- /.col -->
 					</div><!-- /.row -->
