--- a/ourexpertise.html
+++ b/ourexpertise.html
@@ -135,7 +135,10 @@ body {
 }
 </style>
 
+			<link href="assets/css/custom.css" rel="stylesheet">
+
 	</head>
+
 	
 	<body>
 		
@@ -252,7 +255,7 @@ body {
 		<main>
 			
 			<!-- ============================================================= SECTION – HERO ============================================================= -->
-			<section id="hero" class="img-bg-bottom img-bg-soft tint-bg" style="background-image: url('assets/images/MeetingDoutone6.jpg');">
+			<section id="hero" class="img-bg-bottom img-bg-soft tint-bg" style="background-image: url('assets/images/MeetingDoutone7.jpg');">
 				<div class="container inner">
 					<div class="row">
 						<div class="col-sm-10 col-sm-offset-1">
