--- a/ourexpertise.html
+++ b/ourexpertise.html
@@ -133,6 +133,59 @@ body {
 /* 	animation-duration: 4s; */
 	animation-iteration-count: 1;
 }
+
+
+.test {	
+		background-image: url('assets/images/MeetingDoutone8.jpg');
+		background-size: cover;
+		background-position: center bottom !important;
+}
+
+#hero {
+	background-image: url('assets/images/MeetingDoutone8.jpg');
+		filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+	
+	    -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 3s; /* Firefox < 16 */
+        -ms-animation: fadein 3s; /* Internet Explorer */
+         -o-animation: fadein 3s; /* Opera < 12.1 */
+            animation: fadein 3s;
+}
+
+
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+
+
+
 </style>
 
 			<link href="assets/css/custom.css" rel="stylesheet">
@@ -255,7 +308,8 @@ body {
 		<main>
 			
 			<!-- ============================================================= SECTION – HERO ============================================================= -->
-			<section id="hero" class="img-bg-bottom img-bg-soft tint-bg" style="background-image: url('assets/images/MeetingDoutone7.jpg');">
+		<div class="test">
+			<section id="hero" class="img-bg-bottom img-bg-soft tint-bg">
 				<div class="container inner">
 					<div class="row">
 						<div class="col-sm-10 col-sm-offset-1">
@@ -272,9 +326,9 @@ body {
 							</header>
 						</div><!-- /.col -->
 					</div><!-- /.row -->
-
 				</div><!-- /.container -->
 			</section>
+		</div>
 			
 			
 			<!-- ============================================================= SECTION – HERO : END ============================================================= -->
