--- a/testing3.html
+++ b/testing3.html
@@ -20,7 +20,7 @@
 			});
 		</script>
 
-		
+
 		<!-- Bootstrap Core CSS -->
 		<link href="assets/css/bootstrap.min.css" rel="stylesheet">
 		
@@ -140,16 +140,17 @@ body {
 /* 	animation-duration: 4s; */
 	animation-iteration-count: 1;
 }
+/*
+.test {	
+		background-image: url('assets/images/CD_0005_Wall-Logo-BW2.jpg');
+		background-size: cover;
+		background-position: center bottom !important;
+}
+*/
 
 #hero {
 	background-image: url('assets/images/CD_0005_Wall-Logo-BW3.png');
 }
-
-
-
-
-
-
 </style>
 
 		<link href="assets/css/custom.css" rel="stylesheet">
