--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,13 @@
 		<meta name="author" content="">
 		
 		<title>Competition Dynamics</title>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script>
+			$(document).ready(function() {
+			$(".bandw").toggleClass('clicked');
+			});
+		</script>
+
 		
 		<!-- Bootstrap Core CSS -->
 		<link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -134,56 +141,10 @@ body {
 	animation-iteration-count: 1;
 }
 
-.test {	
-		background-image: url('assets/images/ZakimDuotone2.jpg');
-		background-size: cover;
-		background-position: center bottom !important;
-}
 
 #hero {
-	background-image: url('assets/images/ZakimDuotone2.jpg');
-		filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
-	-webkit-filter: grayscale(100%);
-	-webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
-	-moz-animation: fadein 3s; /* Firefox < 16 */
-	-ms-animation: fadein 3s; /* Internet Explorer */
-	-o-animation: fadein 3s; /* Opera < 12.1 */
-	animation: fadein 3s;
+	background-image: url('assets/images/ZakimDuotone2.png');
 }
-
-
-
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-
-
 
 </style>
 
@@ -308,7 +269,7 @@ body {
 			
 			<!-- ============================================================= SECTION – HERO ============================================================= -->
 		<div class="test">
-			<section id="hero" class="img-bg-bottom img-bg-soft tint-bg">
+			<section id="hero" class="img-bg-bottom img-bg-soft tint-bg bandw">
 				<div class="container inner">
 					<div class="row">
 						<div class="col-sm-10 col-sm-offset-1">
