--- a/testing.html
+++ b/testing.html
@@ -13,13 +13,6 @@
 		<meta name="author" content="">
 		
 		<title>Competition Dynamics</title>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script>
-			$(document).ready(function() {
-			$(".bandw").toggleClass('clicked');
-			});
-		</script>
-
 		
 		<!-- Bootstrap Core CSS -->
 		<link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -141,19 +134,15 @@ body {
 	animation-iteration-count: 1;
 }
 
-#hero {
-	background-image: url('assets/images/CD_0005_Wall-Logo-BW3.png');
+
+.position-absolute{
+    position: absolute;
 }
-
-
-
-
-
 
 </style>
 
 		<link href="assets/css/custom.css" rel="stylesheet">
-
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	</head>
 	
 	<body>
@@ -267,13 +256,42 @@ body {
 		
 		
 		<!-- ============================================================= MAIN ============================================================= -->
-		
+		<div>
+    <img id="home-image-1" class="position-absolute" src="assets/images/CD_0005_Wall-Logo-BW2.jpg"/>
+    <img id="home-image-2" class="position-absolute" src="assets/images/ZakimDuotone2.jpg"/>
+    <img id="home-image-2" class="position-absolute" src="assets/images/CD_0009_Meeting-Color3.jpg"/>
+</div>
+
 		<main>
+		
+		
+		
+
+
+<script>
+    $(document).ready(function(){
+        $("#home-image-2, #home-image-3").hide(); //Show first image and hide the rest.
+        setInterval(function(){loopHomeImages();},5000);
+    });
+ 
+    var curr = 1;
+ 
+    function loopHomeImages(){
+        var after = (this.curr + 1)%3; //Next image in the loop
+        var bef = ((curr - 1) >= 0) ? (curr - 1) : 2; //Previous image in the loop
+ 
+        $(".position-absolute").css("z-index", 0);
+        $("#home-image-" + curr).css("z-index", 1);
+        $("#home-image-" + curr).fadeIn("slow", function(){
+            $("#home-image-" + after).hide();
+            $("#home-image-" + bef).hide();
+        });
+        curr = (curr + 1)%3;
+    }
+</script>
+
 			
 			<!-- ============================================================= SECTION – HERO ============================================================= -->
-		<div class="test">
-			<section id="hero" class="img-bg-bottom img-bg-soft tint-bg bandw">
-				<div class="container inner">
 					<div class="row">
 						<div class="col-sm-10 col-sm-offset-1">
 							<header>
