banner min height, overflow hidden index

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ footer {
 
 <div id = "scalecontainer">
 
-	<div id="damnithype_hype_container" style="position:relative;overflow:scroll;width:920px;height:480px;">
+	<div id="damnithype_hype_container" style="position:relative;overflow:hidden;width:920px;height:480px;">
 		<script type="text/javascript" charset="utf-8" src="damnithype.hyperesources/damnithype_hype_generated_script.js?51816"></script>
 	</div>
 </div>
