fix animation font / clean up

--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@ html,body{min-height:100%;}
 			h3 { font-family: 'Sanchezregular', sans-serif; }
 			.navbar-nav > li > a { font-family: 'Sanchezregular', sans-serif; }
 
-
+#Stage_Text3 {
+	line-height: 1.2em;
+}
 </style>
 
 
